k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8scertbot
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    k8s-app: k8scertbot
